Bug 801916 - Fix SMTP xpcshell-tests to handle getting the password properly when no window is available/specified. r=Neil CLOSED TREE